--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "harubot",
+  "name": "harubot-monorepo",
   "version": "1.0.0",
   "description": "harubot monorepo",
   "main": "index.js",
   "scripts": {
+    "dev": "concurrently \"npm:dev:api\" \"npm:dev:web\"",
+    "dev:api": "cd apps/api && npm run start",
+    "dev:web": "cd apps/web && npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "geonha lee",
+  "license": "ISC",
+  "dependencies": {
+    "concurrently": "^9.0.1"
+  }
 }
