--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
-  "name": "harubot-monorepo",
+  "name": "harubot",
   "version": "1.0.0",
+  "private": true,
   "description": "harubot monorepo",
+  "workspaces": [
+    "apps/*",
+    "apps/types"
+  ],
   "main": "index.js",
   "scripts": {
     "dev": "concurrently \"npm:dev:api\" \"npm:dev:web\"",
-    "dev:api": "cd apps/api && npm run start",
-    "dev:web": "cd apps/web && npm run dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev:api": "npm run start:dev --workspace @harubot/api",
+    "dev:web": "npm run dev --workspace @harubot/web",
+    "build": "npm run build --workspaces",
+    "test": "npm run test --workspaces",
+    "lint": "npm run lint --workspaces",
+    "clean": "rimraf node_modules && rimraf apps/*/node_modules"
+  },
+  "devDependencies": {
+    "concurrently": "^9.0.1",
+    "rimraf": "^5.0.0"
   },
   "author": "geonha lee",
-  "license": "ISC",
-  "dependencies": {
-    "concurrently": "^9.0.1"
-  }
+  "license": "ISC"
 }
