modify: db 연결 전 세팅

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "declaration": true,
       "sourceMap": true,
       "baseUrl": ".",
+      "strictPropertyInitialization": false,
       "paths": {
         "@harubot/*": ["packages/*/src"]
       }
